# Horizon_ARM_ROS2-2.0Mark

./: .gitattributes  .gitignore  README.md
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/: __init__.py  ai.py  digital_twin.py  embodied.py  gripper_sdk.py  horizon_sdk.py  io.py  joycon.py  motion.py  visual_grasp.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/: __init__.py  gateway.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/: README.md  __init__.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/core/: __init__.py  asr_handler.py  multimodal_handler.py  tts_handler.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/core/asr/: __init__.py  asr_handler.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/core/base/: __init__.py  base.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/core/config/: __init__.py  config.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/core/llm/: __init__.py  chat_handler.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/core/multimodal/: __init__.py  multimodal_handler.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/core/session/: __init__.py  session.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/providers/: __init__.py  base.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/services/: __init__.py  asr.py  llm.py  multimodal.py  tts.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/AI_SDK/utils/: __init__.py  exceptions.py  helpers.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/Control_SDK/: README.md  test_control_sdk_ucp.py  test_multi_motor_sdk.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/Control_SDK/Control_Core/: __init__.py  command_builder_compat.py  error_handler.py  motor_controller_ucp_simple.py  motor_factory.py  ucp_connection_pool.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/core/arm_core/: kinematics_factory.py
delivery_check/Horizon_Arm2.0_sdk_linux/Embodied_SDK/Horizon_Core/core/esp32_firmware/: io_control.ino
delivery_check/Horizon_Arm2.0_sdk_linux/config/: aisdk_config.yaml  all_parameter_config.json  calibration_parameter.json  dh_parameters_config.json  hand_eye_calibration_poses.yaml  motor_config.json
delivery_check/Horizon_Arm2.0_sdk_linux/config/embodied_config/: preset_actions.json
delivery_check/Horizon_Arm2.0_sdk_linux/config/io_control/: io_mapping.json  jobs_config.json  stop.json  test.json  zero.json
delivery_check/Horizon_Arm2.0_sdk_linux/config/teaching_program/: teaching_awake.json  teaching_program.json  test.json  zero.json
delivery_check/Horizon_Arm2.0_sdk_linux/config/urdf/: Link_3.STL  URDF.csv  URDF.urdf  mjmodel.xml
delivery_check/horizon_arm_ws/: README.md
delivery_check/horizon_arm_ws/docs/: 05_ROS2_SDK开发接口.md  Horizon_ARM_ROS2_2.0核心功能教学开发指南.md  部署说明.md
delivery_check/horizon_arm_ws/src/horizon_arm_bringup/: CMakeLists.txt  README.md  package.xml
delivery_check/horizon_arm_ws/src/horizon_arm_bringup/launch/: acceptance_check.launch.py  display_check.launch.py  driver_real.launch.py  driver_sim.launch.py  moveit_real.launch.py  preset_action_real.launch.py  rviz_joint_gui_real.launch.py  rviz_real_mirror.launch.py  sdk_real.launch.py
delivery_check/horizon_arm_ws/src/horizon_arm_bringup/scripts/: execute_preset_action.py  planning_scene_safety_objects.py  run_acceptance_check.py  rviz_pose_consistency_monitor.py  wait_for_joint_state_stability.py
delivery_check/horizon_arm_ws/src/horizon_arm_control/: README.md  package.xml  setup.cfg  setup.py
delivery_check/horizon_arm_ws/src/horizon_arm_control/examples/: basic_motion_demo.py  embodied_demo.py  teaching_demo.py  vision_pipeline_demo.py
delivery_check/horizon_arm_ws/src/horizon_arm_control/horizon_arm_control/: __init__.py  common.py  digital_output_server.py  embodied_server.py  follow_grasp_server.py  joycon_server.py  ros2_sdk.py  run_instruction_client.py  run_instruction_server.py  system_check.py  target_joint_state_bridge.py  teaching_server.py  vision_fallback.py  visual_grasp_server.py
delivery_check/horizon_arm_ws/src/horizon_arm_description/: CMakeLists.txt  package.xml
delivery_check/horizon_arm_ws/src/horizon_arm_description/meshes/: Link_5.STL
delivery_check/horizon_arm_ws/src/horizon_arm_description/rviz/: horizon_arm.rviz
delivery_check/horizon_arm_ws/src/horizon_arm_description/urdf/: horizon_arm.urdf
delivery_check/horizon_arm_ws/src/horizon_arm_driver/: README.md  package.xml  setup.cfg  setup.py
delivery_check/horizon_arm_ws/src/horizon_arm_driver/config/: horizon_arm_v2.yaml
delivery_check/horizon_arm_ws/src/horizon_arm_driver/horizon_arm_driver/: __init__.py  driver_node.py  ucp_adapter.py
delivery_check/horizon_arm_ws/src/horizon_arm_interfaces/: CMakeLists.txt  README.md  package.xml
delivery_check/horizon_arm_ws/src/horizon_arm_interfaces/action/: RunInstruction.action  TeachingProgram.action
delivery_check/horizon_arm_ws/src/horizon_arm_interfaces/msg/: ArmStatus.msg
delivery_check/horizon_arm_ws/src/horizon_arm_interfaces/srv/: DetectTarget.srv  EmbodiedCommand.srv  EmbodiedInstruction.srv  FollowGraspControl.srv  FollowTarget.srv  JoyconAdvancedControl.srv  JoyconControl.srv  PickHSV.srv  SetDigitalOutput.srv  SetGripperState.srv  TeachJog.srv  VisionConfig.srv  VisualGrasp.srv  VisualGraspEx.srv
delivery_check/horizon_arm_ws/src/horizon_arm_moveit_config/: CMakeLists.txt  package.xml
delivery_check/horizon_arm_ws/src/horizon_arm_moveit_config/config/: dh_parameters_config.json  horizon_arm.srdf  joint_limits.yaml  kinematics.yaml  move_group_ompl.yaml  moveit_controllers.yaml  ompl_planning.yaml  preset_actions.json  tool_workspace_config.yaml  trajectory_execution.yaml
delivery_check/horizon_arm_ws/src/horizon_arm_moveit_config/rviz/: moveit_real.rviz
(+29 files in other folders)
