<?xml version="1.0"?>
<package format="3">
  <name>horizon_arm_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for Horizon Arm ROS2 v2.</description>
  <maintainer email="dev@horizon-arm.local">Horizon Arm Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>horizon_arm_driver</exec_depend>
  <exec_depend>horizon_arm_description</exec_depend>
  <exec_depend>horizon_arm_control</exec_depend>
  <exec_depend>horizon_arm_moveit_config</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
