<?xml version="1.0"?>
<package format="3">
  <name>horizon_arm_control</name>
  <version>0.1.0</version>
  <description>High-level ROS2 control adapters for Horizon Arm 2.0.</description>
  <maintainer email="dev@horizon-arm.local">Horizon Arm Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>horizon_arm_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
