<?xml version="1.0"?>
<package format="3">
  <name>horizon_arm_description</name>
  <version>0.1.0</version>
  <description>Robot description assets for Horizon Arm 2.0.</description>
  <maintainer email="dev@horizon-arm.local">Horizon Arm Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

