<?xml version="1.0"?>
<package format="3">
  <name>horizon_arm_interfaces</name>
  <version>0.1.0</version>
  <description>Custom Horizon Arm ROS2 interfaces.</description>
  <maintainer email="dev@horizon-arm.local">Horizon Arm Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

