<?xml version="1.0"?>
<package format="3">
  <name>horizon_arm_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt2 Jazzy configuration for Horizon Arm 2.0.</description>
  <maintainer email="dev@horizon-arm.local">Horizon Arm Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>horizon_arm_description</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
